# hacker-rank

./: .ansible-lint  .envrc  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  changelog.md  cicd.md  cliff.toml  conf.py  index.md  license.md  readme.md  reflog
.github/: dependabot.yml  index.md
.github/workflows/: black.yml  codeql.yml  docker.yaml  documentation.yml  metadata.yml  pages.yml  pylint.yml  shell.yml  shellcheck.yml
bash/: index.md
bash/10-compute-the-average/: average.sh  index.md
bash/arrays/: index.md
bash/awk/: index.md
bash/cut/: index.md
bash/cut-1/: cut-1.sh  index.md
bash/cut-2/: cut-2.sh  index.md
bash/cut-3/: cut-3.sh
bash/cut-4/: index.md
bash/cut-5/: cut-5.sh
bash/cut-6/: index.md
bash/cut-7/: cut-7.sh  index.md
bash/cut-8/: index.md
bash/cut-9/: index.md
bash/grep/: index.md
bash/head-of-a-text-file-1/: head-of-a-text-file-1.sh  index.md
bash/head-of-a-text-file-2/: head-of-a-text-file-2.sh  index.md
bash/lonely-integer-2/: index.md
bash/middle-of-a-text-file/: index.md  middle-of-a-text-file.sh
bash/paste/: index.md
bash/sed/: index.md
bash/sort-1/: index.md  sort-1.sh
bash/sort-2/: index.md
bash/sort-3/: index.md  sort-3.sh
bash/sort-4/: index.md
bash/sort-5/: index.md
bash/tr-1/: tr-1.sh  (+1 more)
c/: index.md
c-plus-plus/: index.md
docker/: Dockerfile  index.md
go/: index.md
ml/: digits.joblib
python/: index.md  versioning.py
python/problem-solving/03/staircase/: __init__.py  index.md  pyproject.toml  staircase.py
regression/: 01-regression-intro-and-data.ipynb  readme.md
(+166 files in other folders)
